--- a/BaseInfrastructure-WinEC2Instances.template
+++ b/BaseInfrastructure-WinEC2Instances.template
@@ -1,20 +1,20 @@
 {
   "AWSTemplateFormatVersion": "2010-09-09",
 
-  "Description": "Create base infrastructure including VPC, security groups for EC2 (Windows) and VPN.",
+  "Description": "Create base infrastructure including VPC, security groups for EC2s (Windows) and VPN.",
 
   "Parameters" : {
     "NewProjectTag" : {
       "Type" : "String",
-      "Description" : "Project tag to be used for tagging related sources (e.g. 61-44-xxxx).",
-      "Default": "61-44-xxxx"
+      "Description" : "Project tag to be used for tagging related sources (e.g. 61-11-xxxx).",
+      "Default": "61-11-xxxx"
     },
     "NewVpcCIDRFirst2Parts" : {
       "Type" : "String",
-      "Description" : "The first 2 parts of the CIDR (e.g. 61.44) to be assigned to the VPC.",
+      "Description" : "The first 2 parts of the CIDR (e.g. 61.11) to be assigned to the VPC.",
       "MinLength": "3",
       "MaxLength": "7",
-      "Default": "61.44",
+      "Default": "61.11",
       "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})",
       "ConstraintDescription": "must be in the form x.x"
     },
