--- a/templates/EC2-Basic.template
+++ b/templates/EC2-Basic.template
@@ -19,6 +19,12 @@
       "AllowedValues": [ "t1.micro", "t2.nano", "t2.micro", "t2.small", "t2.medium", "t2.large", "m1.small", "m1.medium", "m1.large", "m1.xlarge", "m2.xlarge", "m2.2xlarge", "m2.4xlarge", "m3.medium", "m3.large", "m3.xlarge", "m3.2xlarge", "m4.large", "m4.xlarge", "m4.2xlarge", "m4.4xlarge", "m4.10xlarge", "c1.medium", "c1.xlarge", "c3.large", "c3.xlarge", "c3.2xlarge", "c3.4xlarge", "c3.8xlarge", "c4.large", "c4.xlarge", "c4.2xlarge", "c4.4xlarge", "c4.8xlarge", "g2.2xlarge", "g2.8xlarge", "r3.large", "r3.xlarge", "r3.2xlarge", "r3.4xlarge", "r3.8xlarge", "i2.xlarge", "i2.2xlarge", "i2.4xlarge", "i2.8xlarge", "d2.xlarge", "d2.2xlarge", "d2.4xlarge", "d2.8xlarge", "hi1.4xlarge", "hs1.8xlarge", "cr1.8xlarge", "cc2.8xlarge", "cg1.4xlarge"],
       "ConstraintDescription": "must be a valid EC2 instance type."
     },
+    "DeleteOnTermination": {
+      "Description": "Delete on termination.",
+      "Type": "String",
+      "Default": "false",
+      "AllowedValues": ["true", "false"]
+    },
     "InstanceRole": {
       "Description": "Instance IAM Role.",
       "Type": "String",
@@ -74,15 +80,13 @@
           "DeleteOnTermination": "true",
           "Description": "Primary network interface",
           "DeviceIndex": 0,
-          "GroupSet": [{ "Ref": "SecurityGroupID" }],
+          "GroupSet": [ { "Ref": "SecurityGroupID" } ],
           "SubnetId": { "Ref": "SubnetID" }
         }],
-        "BlockDeviceMappings": [
-          {
+        "BlockDeviceMappings": [{
             "DeviceName": "/dev/sda1",
-            "Ebs": { "VolumeType": "gp2", "VolumeSize": "20", "DeleteOnTermination": "false"}
-          }
-        ],
+            "Ebs": { "VolumeType": "gp2", "VolumeSize": "20", "DeleteOnTermination": { "Ref": "DeleteOnTermination"} }
+        }],
         "Tags": [
           { "Key": "Application", "Value": { "Ref": "AWS::StackName"} },
           { "Key": "Name", "Value": { "Ref": "EC2Name"} },
