--- a/templates/BaseInfrastructure-LinuxEC2Instances.template
+++ b/templates/BaseInfrastructure-LinuxEC2Instances.template
@@ -3,40 +3,39 @@
 
   "Description": "Create base infrastructure including VPC, security groups for EC2s (Ubuntu) and VPN.",
 
-  "Parameters" : {
-    "NewProjectTag" : {
-      "Type" : "String",
-      "Description" : "Project tag to be used for tagging related sources (e.g. 61-11-xxxx).",
+  "Parameters": {
+    "ProjectTag": {
+      "Type": "String",
+      "Description": "Project tag to be used for tagging related sources (e.g. 61-11-xxxx).",
       "Default": "61-11-xxxx"
     },
-    "NewVpcCIDRFirst2Parts" : {
-      "Type" : "String",
-      "Description" : "The first 2 parts of the CIDR (e.g. 61.11) to be assigned to the VPC.",
+    "VpcCIDRFirst2Parts": {
+      "Type": "String",
+      "Description": "The first 2 parts of the CIDR (e.g. 61.11) to be assigned to the VPC.",
       "MinLength": "3",
       "MaxLength": "7",
       "Default": "61.11",
       "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})",
       "ConstraintDescription": "must be in the form x.x"
     },
-    "NewVpcSubnetZone" : {
-      "Type" : "String",
-      "Description" : "The Availability Zone of the default subnet.",
+    "VpcSubnetZone": {
+      "Type": "AWS::EC2::AvailabilityZone::Name",
+      "Description": "The Availability Zone of the default subnet.",
       "Default": "ap-southeast-2a"
     }
   },
-
 
   "Resources": {
     "ProjectVpc": {
       "Type": "AWS::EC2::VPC",
       "Properties": {
-        "CidrBlock": { "Fn::Join" : ["", [{"Ref" : "NewVpcCIDRFirst2Parts"}, ".0.0/16"]]},
+        "CidrBlock": { "Fn::Join": ["", [{"Ref": "VpcCIDRFirst2Parts"}, ".0.0/16"]]},
         "InstanceTenancy": "default",
         "EnableDnsSupport": "true",
         "EnableDnsHostnames": "true",
         "Tags": [
           { "Key": "Application", "Value": { "Ref": "AWS::StackName" } },
-          { "Key": "Name", "Value": { "Ref": "NewProjectTag" } }
+          { "Key": "Name", "Value": { "Ref": "ProjectTag" } }
         ]
       }
     },
@@ -44,12 +43,12 @@
     "ProjectSubnetA": {
       "Type": "AWS::EC2::Subnet",
       "Properties": {
-        "CidrBlock": { "Fn::Join" : ["", [{"Ref" : "NewVpcCIDRFirst2Parts"}, ".0.0/20"]]},
-        "AvailabilityZone": { "Ref": "NewVpcSubnetZone" },
+        "CidrBlock": { "Fn::Join": ["", [{"Ref": "VpcCIDRFirst2Parts"}, ".0.0/20"]]},
+        "AvailabilityZone": { "Ref": "VpcSubnetZone" },
         "VpcId": { "Ref": "ProjectVpc" },
         "Tags": [
           { "Key": "Application", "Value": { "Ref": "AWS::StackName" } },
-          { "Key": "Name", "Value": { "Fn::Join" : ["-", [{"Ref" : "NewProjectTag"}, {"Ref" : "NewVpcSubnetZone"}]]} }
+          { "Key": "Name", "Value": { "Fn::Join": ["-", [{"Ref": "ProjectTag"}, {"Ref": "VpcSubnetZone"}]]} }
         ]
       }
     },
@@ -67,7 +66,7 @@
       "Properties": {
         "Tags": [
           { "Key": "Application", "Value": { "Ref": "AWS::StackName" } },
-          { "Key": "Name", "Value": { "Ref": "NewProjectTag" } }
+          { "Key": "Name", "Value": { "Ref": "ProjectTag" } }
         ]
       }
     },
@@ -85,9 +84,9 @@
       "Properties": {
         "Tags": [
           { "Key": "Application", "Value": { "Ref": "AWS::StackName" } },
-          { "Key": "Name", "Value": { "Ref": "NewProjectTag" } }
+          { "Key": "Name", "Value": { "Ref": "ProjectTag" } }
         ],
-        "DomainName": { "Fn::Join" : ["", [{"Ref" : "AWS::Region"}, ".compute.internal"]]},
+        "DomainName": { "Fn::Join": ["", [{"Ref": "AWS::Region"}, ".compute.internal"]]},
         "DomainNameServers": [ "AmazonProvidedDNS" ]
       }
     },
@@ -106,7 +105,7 @@
         "VpcId": { "Ref": "ProjectVpc" },
         "Tags": [
           { "Key": "Application", "Value": { "Ref": "AWS::StackName" } },
-          { "Key": "Name", "Value": { "Ref": "NewProjectTag" } }
+          { "Key": "Name", "Value": { "Ref": "ProjectTag" } }
         ]
       }
     },
@@ -139,7 +138,7 @@
         "VpcId": { "Ref": "ProjectVpc" },
         "Tags": [
           { "Key": "Application", "Value": { "Ref": "AWS::StackName" } },
-          { "Key": "Name",  "Value": { "Ref": "NewProjectTag" } }
+          { "Key": "Name",  "Value": { "Ref": "ProjectTag" } }
         ]
       }
     },
@@ -167,16 +166,16 @@
       "Type": "AWS::EC2::SecurityGroup",
       "Properties": {
         "VpcId": { "Ref": "ProjectVpc" },
-        "GroupDescription": { "Ref": "NewProjectTag" },
+        "GroupDescription": { "Ref": "ProjectTag" },
         "SecurityGroupIngress": [
-          { "IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "CidrIp": { "Fn::Join" : ["", [{"Ref" : "NewVpcCIDRFirst2Parts"}, ".0.0/16"]]} }
+          { "IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "CidrIp": { "Fn::Join": ["", [{"Ref": "VpcCIDRFirst2Parts"}, ".0.0/16"]]} }
         ],
         "SecurityGroupEgress": [
           { "IpProtocol": "-1", "CidrIp": "0.0.0.0/0" }
         ],
         "Tags": [
           { "Key": "Application", "Value": { "Ref": "AWS::StackName" } },
-          { "Key": "Name",  "Value": { "Ref": "NewProjectTag" } }
+          { "Key": "Name",  "Value": { "Ref": "ProjectTag" } }
         ]
       }
     },
@@ -198,7 +197,7 @@
         "SecurityGroupIngress": [
           { "IpProtocol": "icmp", "FromPort": "0", "ToPort": "-1", "CidrIp": "0.0.0.0/0" },
           { "IpProtocol": "icmp", "FromPort": "8", "ToPort": "-1", "CidrIp": "0.0.0.0/0" },
-          { "IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "CidrIp": { "Fn::Join" : ["", [{"Ref" : "NewVpcCIDRFirst2Parts"}, ".0.0/20"]]} },
+          { "IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "CidrIp": { "Fn::Join": ["", [{"Ref": "VpcCIDRFirst2Parts"}, ".0.0/20"]]} },
           { "IpProtocol": "tcp", "FromPort": "443", "ToPort": "443", "CidrIp": "0.0.0.0/0" },
           { "IpProtocol": "tcp", "FromPort": "943", "ToPort": "943", "CidrIp": "0.0.0.0/0" }
         ],
@@ -207,7 +206,7 @@
         ],
         "Tags": [
           { "Key": "Application", "Value": { "Ref": "AWS::StackName" } },
-          { "Key": "Name",  "Value": { "Fn::Join" : ["-", ["openvpn", {"Ref" : "NewProjectTag"}]]} }
+          { "Key": "Name",  "Value": { "Fn::Join": ["-", ["openvpn", {"Ref": "ProjectTag"}]]} }
         ]
       }
     }
