--- a/templates/RDS-PostgreSQL.template
+++ b/templates/RDS-PostgreSQL.template
@@ -3,24 +3,24 @@
 
   "Description": "Create RDS PostgreSQL with PostGIS instance and a Read-Write managed policy attached.",
 
-  "Parameters" : {
+  "Parameters": {
     "DBVpc": {
-      "Description": "The ID of the VPC for the DB / DB Sec group.",
-      "Type": "AWS::EC2::VPC::Id"
+      "Type": "AWS::EC2::VPC::Id",
+      "Description": "The ID of the VPC for the DB / DB Sec group."
     },
     "DBAllowedCidrBlock": {
       "Type": "String",
       "Description": "The Cidr block prefix (eg: 61.2) of the VPC for the DB / DB Sec group. Assumes (32.0/24 + 33.0/24) are free subnet blocks that will be created for Multi AZ RDS",
-      "Default" : "61.2",
+      "Default": "61.2",
       "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})",
       "MinLength": "3",
       "MaxLength": "7"
     },
-    "DBSub1Zone" : {
-      "Type" : "String",
-      "Description" : "The availability zone for subnet 1 to create (must have 2 different zones for Multi AZ).",
-      "Default" : "ap-southeast-2a",
-      "AllowedValues" : [
+    "DBSub1Zone": {
+      "Type": "String",
+      "Description": "The availability zone for subnet 1 to create (must have 2 different zones for Multi AZ).",
+      "Default": "ap-southeast-2a",
+      "AllowedValues": [
         "ap-southeast-2a",
         "ap-southeast-2b",
         "ap-southeast-2c",
@@ -29,11 +29,11 @@
         "us-east-2c"
       ]
     },
-    "DBSub2Zone" : {
-      "Type" : "String",
-      "Description" : "The availability zone for subnet 1 to create (must have 2 different zones for Multi AZ).",
-      "Default" : "ap-southeast-2b",
-      "AllowedValues" : [
+    "DBSub2Zone": {
+      "Type": "String",
+      "Description": "The availability zone for subnet 1 to create (must have 2 different zones for Multi AZ).",
+      "Default": "ap-southeast-2b",
+      "AllowedValues": [
         "ap-southeast-2a",
         "ap-southeast-2b",
         "ap-southeast-2c",
@@ -42,16 +42,16 @@
         "us-east-2c"
       ]
     },
-    "DBName" : {
-      "Type" : "String",
-      "Description" : "The unique name of the PSQL+GIS DB to be created with the managed policies attached.",
-      "Default" : "postgres"
+    "DBName": {
+      "Type": "String",
+      "Description": "The unique name of the PSQL+GIS DB to be created with the managed policies attached.",
+      "Default": "postgres"
     },
-    "DBClass" : {
-      "Type" : "String",
-      "Description" : "The name of the compute and memory capacity classes of the DB instance.",
-      "Default" : "db.t2.medium",
-      "AllowedValues" : [
+    "DBClass": {
+      "Type": "String",
+      "Description": "The name of the compute and memory capacity classes of the DB instance.",
+      "Default": "db.t2.medium",
+      "AllowedValues": [
         "db.t2.micro",
         "db.t2.small",
         "db.t2.medium",
@@ -66,12 +66,12 @@
     "DBTag": {
       "Type": "String",
       "Description": "Tag for the DB / DB Sec group.",
-      "Default" : "postgres-test"
+      "Default": "postgres-test"
     },
     "DBAdmin": {
       "Type": "String",
       "Description": "Master / Admin user name.",
-      "Default" : "admin"
+      "Default": "admin"
     },
     "DBAdminPass": {
       "Type": "String",
@@ -170,11 +170,11 @@
   "Outputs": {
     "DBEndpoint": {
       "Description": "The DB endpoint for VPC accessible resources.",
-      "Value": { "Fn::GetAtt" : ["PSQLGisDB", "Endpoint.Address"] }
+      "Value": { "Fn::GetAtt": ["PSQLGisDB", "Endpoint.Address"] }
     },
     "DBPort": {
       "Description": "The DB port for VPC accessible resources.",
-      "Value": { "Fn::GetAtt" : ["PSQLGisDB", "Endpoint.Port"] }
+      "Value": { "Fn::GetAtt": ["PSQLGisDB", "Endpoint.Port"] }
     }
   }
 }
